Refactor: Remove commented-out event creation code and streamline product update logic